--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 **/*.ini
 **/*.config
 **/*.props
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
