Clean up logs directory

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ challenges.md
 *node_modules
 
 # Packer logs
-/packer/logs*
+packer/logs*
 
 # Keep log folder itself
-!/packer/logs
+!packer/logs
